// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should trigger a remove action 1`] = `
Object {
  "payload": "remove",
  "type": "@trampss/REMOVE_TESTPREFIX",
}
`;

exports[`actions should trigger a reset action 1`] = `
Object {
  "type": "@trampss/RESET_TESTPREFIX",
}
`;

exports[`actions should trigger a set action 1`] = `
Object {
  "payload": Array [
    Object {
      "an": "element_set1",
      "code": "set1",
    },
    Object {
      "an": "element_set2",
      "code": "set2",
    },
  ],
  "type": "@trampss/SET_TESTPREFIX",
}
`;

exports[`actions should trigger an add action 1`] = `
Object {
  "payload": Object {
    "an": "element_add",
    "code": "add",
  },
  "type": "@trampss/ADD_TESTPREFIX",
}
`;

exports[`actions should trigger an addOrUpdate action 1`] = `
Object {
  "payload": Object {
    "an": "element_add",
    "code": "add",
  },
  "type": "@trampss/ADD_OR_UPDATE_TESTPREFIX",
}
`;
